# keyboard-mouse-autoconnect

./: README.md  pyproject.toml  setup.sh
src/kmautoconnect/: __init__.py  cli.py
tests/: test_cli.py
